# zhangxuefeng-agent

./: .dockerignore  .env.example  .gitignore  App.jsx  CLAUDE.md  Dockerfile  MEMORY.md  README.md  SKILL.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
.cursor/rules/: coding-style.mdc
.github/workflows/: ci.yml
.trellis/: .template-hashes.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_subject_rankings.py  003_extend_major_employment.py
app/: __init__.py  main.py
app/agent/: README.md  __init__.py  ab_testing.py  prompt_templates.py  tools.py
backend/: cache.py  config.py  database.py  dependencies.py  docs.py  export.py  logging_config.py  main.py  requirements.txt  security.py  session_store.py  soul_query.py  test_api_connection.py  test_api_connection2.py  test_minimax.py  test_soul_query.py  user_profile.py
docs/: STARTUP.md  api-tests.http  api.md  data-storage-architecture.md  frontend-design-spec.md  langchain-integration-plan.md  postman_collection.json  rag-technical-notes.md  technical-plan.md  test-api.sh
e2e/: package-lock.json  package.json  playwright.config.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
miniapp/: App.vue  index.html  manifest.json  package.json  pages.json  tsconfig.json
tests/: test_context_trimming.py  test_e2e_core_flow.py  test_feedback.py  test_integration.py  test_langchain_agent.py  test_performance.py  test_qa_full_flow.py  test_security.py  test_session.py  test_session_store.py  test_soul_query.py  test_tool_integration.py
(+154 files in other folders)
