[project]
name = "zhangxuefeng-agent"
version = "0.1.0"
description = "张雪峰 AI 咨询 Agent — 高考/考研/职业规划顾问"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "redis>=5.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.0",
    "openai>=1.51.0",
    "sse-starlette>=2.1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
